--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
 .DS_Store
-*.csproj
-*.pidb
-*.sln
-*.userprefs
-*.meta
-*.unitypackage
-*.apk
+
 *.jar
+*.h
 *.a
-.vs
+
+*.meta
 Library
+Logs
+Packages
 ProjectSettings
 Temp
-Packages
+
+.vs
+*.sln
+*.csproj
 obj
+
+*.unitypackage
+*.apk
